--- a/src/app/profile/contact/contact.component.html
+++ b/src/app/profile/contact/contact.component.html
@@ -64,11 +64,11 @@
                                         <p class="mb-0">
                                             <strong>Phone</strong>
                                         </p>
-                                        <p class="pb-2">+91 9974990993</p>
+                                        <p class="pb-2">+1 (713) 459-8636</p>
                                         <p class="mb-0">
                                             <strong>Email</strong>
                                         </p>
-                                        <p>mehulkothari05@gmail.com</p>
+                                        <p>pavanskollimarla@gmail.com</p>
                                     </div>
                                 </div>
                             </div>
