--- a/src/app/profile/education/education.component.html
+++ b/src/app/profile/education/education.component.html
@@ -5,77 +5,49 @@
         <div class="row">
           <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
             <div class="card-body cc-education-header">
-              <p>2015 - 2019</p>
+              <p>2022 - 2023</p>
+              <div class="h5">Masters's Degree</div>
+            </div>
+          </div>
+          <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+            <div class="card-body">
+              <!-- <div class="h5">Bachelor of </div> -->
+               <h4 class="category">Master of Science In Computer Science
+               </h4>
+               <ul>
+                <li>GPA : 3.5 / 4.0 </li>
+                    <!-- <li>Completed B.E in Computer Engineering with <b>9.54 CGPA</b>.</li>
+                 <li>Won the <b>Best Student Award</b> 3 times for excellent Academic records at College.</li>
+                 <li>Maintained above <b>9.1 spi</b> in every semester of college academic .</li> -->
+             </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="row">
+          <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+            <div class="card-body cc-education-header">
+              <p>2017 - 2021</p>
               <div class="h5">Bachelor's Degree</div>
             </div>
           </div>
           <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
             <div class="card-body">
-              <div class="h5">Bachelor of Engineering</div>
-               <h4 class="category">Aditya Silver Oak Institute Of Technology
+              <!-- <div class="h5">Higher Secondary</div> -->
+               <h4 class="category">Bachelor Of Technology in Computer Science and Engineering
                </h4>
                <ul>
-                <li> Aditya Silver Oak Institute is GTU Affiliated and <b>ranks 7th</b> in Gujurat </li>
-                    <li>Completed B.E in Computer Engineering with <b>9.54 CGPA</b>.</li>
-                 <li>Won the <b>Best Student Award</b> 3 times for excellent Academic records at College.</li>
-                 <li>Maintained above <b>9.1 spi</b> in every semester of college academic .</li>
-             </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="row">
-          <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-            <div class="card-body cc-education-header">
-              <p>2013 - 2015</p>
-              <div class="h5">Higher Secondary</div>
-            </div>
-          </div>
-          <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-            <div class="card-body">
-              <div class="h5">Higher Secondary</div>
-               <h4 class="category">Gyandeeep Vidhyalaya
-               </h4>
-               <ul>
-                <li>
-                  The High School was mainly focus on the bases of science, mathematics, and Chemistry
-                                  </li>
-                                  <li>
+                <li>CGPA : 8.64/10</li>
+                                  <!-- <li>
                                      There was also a good base on physics, mathematics and chemistry.
                                   </li>
                                   <li>
                                       Completed my high school with<b> 78%</b>.
-                                  </li>
+                                  </li> -->
              </ul>
             </div>
           </div>
         </div>
       </div>
-      <div class="card">
-        <div class="row">
-          <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-            <div class="card-body cc-education-header">
-              <p>2012 - 2013</p>
-              <div class="h5">Sedcondary School</div>
-            </div>
-          </div>
-          <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-            <div class="card-body">
-              <div class="h5">Secondary School</div>
-               <h4 class="category">Gyandeeep Vidhyalaya
-               </h4>
-               <ul>
-                <li>The Secondary aims at Maths , English , Science, Social Science, Litrature and Languages.
-                </li>
-               
-                <li>
-                    Completed my Secondary school with <b>84%</b>.
-                </li>
-             </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
