--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,13 +3,11 @@
     <app-intro></app-intro>
     <app-about></app-about>
     <app-experience></app-experience>
-    <app-extra-ciricular></app-extra-ciricular>
-    <app-projects></app-projects>
+    <!-- <app-extra-ciricular></app-extra-ciricular> -->
+    <!-- <app-projects></app-projects> -->
     <app-skills></app-skills>
     <app-education></app-education>
 
-    <app-portfolio></app-portfolio>
-    <app-reference></app-reference>
     <app-contact></app-contact>
 </div>
 <app-footer></app-footer>
