--- a/src/app/profile/header/header.component.html
+++ b/src/app/profile/header/header.component.html
@@ -19,14 +19,14 @@
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#experience">Experience</a>
             </li>
-
+<!-- 
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#extra-curicular">Extra Curricular</a>
             </li>
 
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#projects">Projects</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#skill">Skills</a>
             </li>
@@ -35,9 +35,9 @@
               <a class="nav-link smooth-scroll" href="#education">Education</a>
             </li>
 
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#contact">Contact</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
