--- a/src/app/profile/intro/intro.component.html
+++ b/src/app/profile/intro/intro.component.html
@@ -12,8 +12,8 @@
           </div>
           <h1 class="h2 title">Pavan Kollimarla</h1>
           <p class="category text-white">Software Developer</p>
-          <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
-            data-aos-anchor="data-aos-anchor">Hire Me</a>
+          <!-- <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
+            data-aos-anchor="data-aos-anchor">Hire Me</a> -->
           <a class="btn btn-primary" href={{cvUrl}} target="_blank" data-aos="zoom-in"
             data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
